SERVER-10623 Added error handling to NUMA check

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>